<resources>
    <string name="app_name">アラート通知</string>
    <string name="btnText_0111">サービスの起動</string>
    <string name="btnText_0112">サービスの停止</string>
    <string name="btnText_0120">状態更新</string>
    <string name="btnText_0130">電話帳取得</string>
    <string name="btnText_0140">SMS送信許可</string>
    <string name="btnText_0150">SMS送信テスト</string>
    <string name="btnText_9990">APログ</string>
    <string name="btnText_9991">処理ログ</string>
    <string name="btnText_9992">SMSログ</string>
</resources>
